[package]
name = "axum-flash"
version = "0.5.0"
edition = "2018"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Web framework that focuses on ergonomics and modularity"
homepage = "https://github.com/davidpdrsn/axum-flash"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-flash"

[dependencies]
async-trait = "0.1"
axum-core = "0.3.0-rc.1"
axum-extra = {version = "0.4.0-rc.1", features = ["cookie", "cookie-signed"]}
base64 = "0.13"
cookie = { version = "0.16", features = ["signed", "percent-encode"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.6.0-rc.1", default_features = true }
hyper = "0.14"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
