[package]
name = "axum-flash"
version = "0.7.0"
edition = "2018"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Web framework that focuses on ergonomics and modularity"
homepage = "https://github.com/davidpdrsn/axum-flash"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-flash"

[dependencies]
# public deps
axum-core = "0.4.0"
cookie = { version = "0.18", features = ["signed", "percent-encode"] }
http = "1.0"
serde = { version = "1.0", features = ["derive"] }

# private deps
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed"] }
base64 = "0.21"
serde_json = "1.0"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.7.0", features = ["macros"] }
http-body-util = "0.1"
hyper = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tower = "0.4"

[package.metadata.cargo-public-api-crates]
allowed = [
    "axum_core",
    "cookie",
    "http",
    "serde",
]
